// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatContainer component rendering hidden hides the component when hidden 1`] = `null`;

exports[`ChatContainer component rendering messages appends messages to the transcript 1`] = `
<div
  className="ChatContainer"
>
  <HeaderMenu
    onDock={[Function]}
    onMinimize={[Function]}
    onPop={[Function]}
  />
  <div
    className="banner"
    style={
      Object {
        "backgroundColor": "#333",
      }
    }
  >
    <span
      className="messageUs"
    >
      TOOL TIME
    </span>
  </div>
  <div
    className="chatContainerBody"
  >
    <Transcript
      messages={
        Array [
          Object {
            "authorType": "Customer",
            "id": "id--0",
            "text": "text--0",
            "timestamp": 0,
            "type": "Text",
          },
          Object {
            "authorType": "Agent",
            "id": "id--1",
            "text": "text--1",
            "timestamp": 1,
            "type": "Text",
          },
          Object {
            "authorType": "Customer",
            "id": "id--2",
            "text": "text--2",
            "timestamp": 2,
            "type": "Text",
          },
        ]
      }
    />
    <MessageForm
      agentTyping={false}
    />
  </div>
</div>
`;

exports[`ChatContainer component rendering renders 1`] = `
<div
  className="ChatContainer"
>
  <HeaderMenu
    onDock={[Function]}
    onMinimize={[Function]}
    onPop={[Function]}
  />
  <div
    className="banner"
    style={
      Object {
        "backgroundColor": "#333",
      }
    }
  >
    <span
      className="messageUs"
    >
      TOOL TIME
    </span>
  </div>
  <div
    className="chatContainerBody"
  >
    <Spinner />
  </div>
</div>
`;
